--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -2,10 +2,10 @@
 
 @font-face {
 	font-family: 'Roboto';
-	src: url('Roboto-Regular.eot');
-	src: url('Roboto-Regular.eot?#iefix') format('embedded-opentype'),
-		url('Roboto-Regular.woff') format('woff'),
-		url('Roboto-Regular.ttf')  format('truetype');
+	src: url('/fonts/Roboto-Regular.eot');
+	src: url('/fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+		url('/fonts/Roboto-Regular.woff') format('woff'),
+		url('/fonts/Roboto-Regular.ttf')  format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
