--- a/templates/todo.html
+++ b/templates/todo.html
@@ -8,7 +8,7 @@
   <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
   <label for="toggle-all">Mark all as complete</label>
   <ul id="todo-list">
-    <li ng-repeat="todo in todos | filter:statusFilter track by $index" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
+    <li ng-repeat="todo in todos | filter:statusFilter track by $index" ng-class="{completed: todo.completed, editing: isEdited(todo, editedTodo)}">
       <div class="view">
         <input class="toggle" type="checkbox" ng-model="todo.completed" ng-change="todoCompleted(todo)">
         <label ng-dblclick="editTodo(todo)">{{todo.title}}</label>
@@ -26,13 +26,13 @@
   </span>
   <ul id="filters">
     <li>
-      <a ng-class="{selected: location.path() == '/'} " href="#/">All</a>
+      <a ng-class="{selected: isActive('/')} " href="#/">All</a>
     </li>
     <li>
-      <a ng-class="{selected: location.path() == '/active'}" href="#/active">Active</a>
+      <a ng-class="{selected: isActive('/active')}" href="#/active">Active</a>
     </li>
     <li>
-      <a ng-class="{selected: location.path() == '/completed'}" href="#/completed">Completed</a>
+      <a ng-class="{selected: isActive('/completed')}" href="#/completed">Completed</a>
     </li>
   </ul>
   <button id="clear-completed" ng-click="clearCompletedTodos()" ng-show="remainingCount < todos.length">Clear completed</button>
